--- a/lecture-1/error-handing.ipynb
+++ b/lecture-1/error-handing.ipynb
@@ -60,6 +60,262 @@
     "\n",
     "print(\"結果:\", result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca22863",
+   "metadata": {},
+   "source": [
+    "## 複数のエラーが発生する可能性がある場合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3640a0b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "エラーが発生しました: name 'z' is not defined\n",
+      "変数が定義されていません。結果をNoneに設定します。。\n",
+      "結果: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    result = x / z\n",
+    "except ZeroDivisionError as e:\n",
+    "    result = None\n",
+    "    print(\"エラーが発生しました:\", e)   \n",
+    "    print(\"0で割ることはできません。結果をNoneに設定します。。\")\n",
+    "except NameError as e:\n",
+    "    result = None\n",
+    "    print(\"エラーが発生しました:\", e)   \n",
+    "    print(\"変数が定義されていません。結果をNoneに設定します。。\")\n",
+    "\n",
+    "print(\"結果:\", result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed8428c6",
+   "metadata": {},
+   "source": [
+    "## エラーが発生しなかった場合にのみ実行したい処理がある場合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "255d1560",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "エラーは発生しませんでした。結果を表示します。\n",
+      "結果: 0.3333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = 3\n",
+    "\n",
+    "try:\n",
+    "    result = x / z\n",
+    "except ZeroDivisionError as e:\n",
+    "    result = None\n",
+    "    print(\"エラーが発生しました:\", e)   \n",
+    "    print(\"0で割ることはできません。結果をNoneに設定します。。\")\n",
+    "except NameError as e:\n",
+    "    result = None\n",
+    "    print(\"エラーが発生しました:\", e)   \n",
+    "    print(\"変数が定義されていません。結果をNoneに設定します。。\")\n",
+    "else:\n",
+    "    print(\"エラーは発生しませんでした。結果を表示します。\")\n",
+    "\n",
+    "print(\"結果:\", result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dba9e43",
+   "metadata": {},
+   "source": [
+    "## エラー発生の有無に関わらず実行したい処理がある場合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2f0d5667",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "エラーが発生しました: division by zero\n",
+      "0で割ることはできません。結果をNoneに設定します。。\n",
+      "計算処理が終了しました。\n",
+      "結果: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = 0\n",
+    "try:\n",
+    "    result = x / z\n",
+    "except ZeroDivisionError as e:\n",
+    "    result = None\n",
+    "    print(\"エラーが発生しました:\", e)   \n",
+    "    print(\"0で割ることはできません。結果をNoneに設定します。。\")\n",
+    "except NameError as e:\n",
+    "    result = None\n",
+    "    print(\"エラーが発生しました:\", e)   \n",
+    "    print(\"変数が定義されていません。結果をNoneに設定します。。\")\n",
+    "else:\n",
+    "    print(\"エラーは発生しませんでした。結果を表示します。\")\n",
+    "finally:\n",
+    "    print(\"計算処理が終了しました。\")\n",
+    "\n",
+    "print(\"結果:\", result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0b341c3",
+   "metadata": {},
+   "source": [
+    "## システム終了以外の全てのエラーをハンドリングしたい場合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "79091e2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "予期せぬエラーが発生しました: division by zero\n",
+      "計算できません。結果をNoneに設定します。。\n",
+      "計算処理が終了しました。\n",
+      "結果: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    result = x / y\n",
+    "except Exception as e:\n",
+    "    result = None\n",
+    "    print(\"予期せぬエラーが発生しました:\", e)   \n",
+    "    print(\"計算できません。結果をNoneに設定します。。\")\n",
+    "else:\n",
+    "    print(\"エラーは発生しませんでした。結果を表示します。\")\n",
+    "finally:\n",
+    "    print(\"計算処理が終了しました。\")\n",
+    "\n",
+    "print(\"結果:\", result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4377d32d",
+   "metadata": {},
+   "source": [
+    "## webスクレイピングでのエラー処理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6136a2e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a06213b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'requests' has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m url = \u001b[33m'\u001b[39m\u001b[33mhttps:www.musashino-u.ac.jp/invalid-page\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;66;03m# 存在しないURL\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m response = \u001b[43mrequests\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m(url)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mステータスコード:\u001b[39m\u001b[33m\"\u001b[39m, response.status_code)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# ステータスコードが200以外の例を発生させる\u001b[39;00m\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'requests' has no attribute 'get'"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https:www.musashino-u.ac.jp/invalid-page' # 存在しないURL\n",
+    "response = requests.get(url)\n",
+    "print(\"ステータスコード:\", response.status_code)\n",
+    "\n",
+    "# ステータスコードが200以外の例を発生させる\n",
+    "response.raise_for_status()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "97993026",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "webスクレイピング処理が終了しました。\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'requests' has no attribute 'exceptions'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     response = \u001b[43mrequests\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m(url)\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mステータスコード:\u001b[39m\u001b[33m\"\u001b[39m, response.status_code)\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'requests' has no attribute 'get'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mステータスコード:\u001b[39m\u001b[33m\"\u001b[39m, response.status_code)\n\u001b[32m      5\u001b[39m     response.raise_for_status()  \n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[43mrequests\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexceptions\u001b[49m.HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m      7\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mHTTPエラーが発生しました:\u001b[39m\u001b[33m\"\u001b[39m, e)\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m requests.exceptions.RequestException \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'requests' has no attribute 'exceptions'"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https:www.musashino-u.ac.jp/invalid-page' # 存在しないURL\n",
+    "try:\n",
+    "    response = requests.get(url)\n",
+    "    print(\"ステータスコード:\", response.status_code)\n",
+    "    response.raise_for_status()  \n",
+    "except requests.exceptions.HTTPError as e:\n",
+    "    print(\"HTTPエラーが発生しました:\", e)\n",
+    "except requests.exceptions.RequestException as e:\n",
+    "    print(\"リクエスト中にエラーが発生しました:\", e)\n",
+    "else:\n",
+    "    print(\"webページに正常にアクセスできました。\")\n",
+    "finally:\n",
+    "    print(\"webスクレイピング処理が終了しました。\")"
+   ]
   }
  ],
  "metadata": {
