--- a/lecture-1/Githubスクレイピング.ipynb
+++ b/lecture-1/Githubスクレイピング.ipynb
@@ -340,6 +340,159 @@
     "        conn.close()\n",
     "        print(\"DB接続を閉じました。\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4985e53f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- DBからのデータ取得と表示開始 ---\n",
+      "DBファイル 'github_repos.db' から 6 件のデータを取得しました。\n",
+      "\n",
+      "--- SELECT文実行結果 (データ確認) ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>repository_name</th>\n",
+       "      <th>main_language</th>\n",
+       "      <th>stars_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>dsprog2_2025</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>deprogramming2</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-</td>\n",
+       "      <td>Jupyter Notebook</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dsprog1_2025</td>\n",
+       "      <td>Jupyter Notebook</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>git-practice-2025</td>\n",
+       "      <td>HTML</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>git-practice</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     repository_name     main_language stars_count\n",
+       "0       dsprog2_2025               N/A           0\n",
+       "1     deprogramming2               N/A           0\n",
+       "2                  -  Jupyter Notebook           0\n",
+       "3       dsprog1_2025  Jupyter Notebook           0\n",
+       "4  git-practice-2025              HTML           0\n",
+       "5       git-practice               N/A           0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# データベースの定義\n",
+    "DB_NAME = 'github_repos.db'\n",
+    "TABLE_NAME = 'repositories' # 作成したテーブル名\n",
+    "\n",
+    "print(\"--- DBからのデータ取得と表示開始 ---\")\n",
+    "\n",
+    "try:\n",
+    "    # 1. DB接続を確立\n",
+    "    conn = sqlite3.connect(DB_NAME)\n",
+    "    \n",
+    "    # スター数のK表記を数値に変換するためのカスタム関数を登録 (並び替えに必要)\n",
+    "    def convert_stars_to_int(stars_str):\n",
+    "        if isinstance(stars_str, str):\n",
+    "            stars_str = stars_str.replace(',', '')\n",
+    "            if 'k' in stars_str.lower():\n",
+    "                return int(float(stars_str.lower().replace('k', '').strip()) * 1000)\n",
+    "            try:\n",
+    "                return int(stars_str)\n",
+    "            except ValueError:\n",
+    "                return 0\n",
+    "        return 0\n",
+    "    conn.create_function(\"TO_INT_STARS\", 1, convert_stars_to_int)\n",
+    "\n",
+    "    # 2. SELECT文の定義\n",
+    "    select_query = f'''\n",
+    "        SELECT \n",
+    "            repository_name,  -- リポジトリ名\n",
+    "            main_language,    -- 主要言語\n",
+    "            stars_count       -- スターの数\n",
+    "        FROM \n",
+    "            {TABLE_NAME}\n",
+    "        ORDER BY \n",
+    "            TO_INT_STARS(stars_count) DESC  -- スター数降順で並べ替え\n",
+    "    '''\n",
+    "\n",
+    "    # 3. SQLを実行し、結果をpandas DataFrameに直接読み込む\n",
+    "    df_results = pd.read_sql_query(select_query, conn)\n",
+    "\n",
+    "    # 4. 接続を閉じる\n",
+    "    conn.close()\n",
+    "\n",
+    "    print(f\"DBファイル '{DB_NAME}' から {len(df_results)} 件のデータを取得しました。\")\n",
+    "\n",
+    "    # 5. 結果をJupyter Notebook/Colabで表形式で表示\n",
+    "    print(\"\\n--- SELECT文実行結果 (データ確認) ---\")\n",
+    "    display(df_results)\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"エラー: データ取得中にエラーが発生しました: {e}\")"
+   ]
   }
  ],
  "metadata": {
